middleware/k8s/api-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $INGRESS
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  #### BIND TO NGINX FROM: https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.0/deploy/static/provider/cloud/deploy.yaml
  ingressClassName: nginx
  tls:
    - hosts:
        - $INGRESS_PRODUCTS
        - $INGRESS_API
      secretName: $TLS_SECRET
  rules:
    - host: $INGRESS_PRODUCTS
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: $SERVICE
                port:
                  number: $INGRESS_PORT
    - host: $INGRESS_API
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: $SERVICE
                port:
                  number: $INGRESS_PORT
